test/sema/methods/self_type_in_struct_self_containing.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
// CHECK: [[# @LINE + 1 ]]:8: error: struct 'S' contains itself
struct S {
  x: Self
}

fn main() {}
